--- a/docker/postgres/pg_hba.conf
+++ b/docker/postgres/pg_hba.conf
@@ -1,23 +1,42 @@
 # JEEX Idea PostgreSQL Host-Based Authentication Configuration
-# This file controls client authentication for PostgreSQL
+# This file controls client authentication for PostgreSQL with enhanced security
+# Implements TLS encryption and proper access controls
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-local   all             all                                     md5
+# Allow trust for local Unix socket connections (container internal)
+local   all             all                                     trust
 
-# IPv4 local connections:
-host    all             all             127.0.0.1/32            md5
+# IPv4 local connections (localhost only)
+host    all             all             127.0.0.1/32            scram-sha-256
 
-# IPv6 local connections:
-host    all             all             ::1/128                 md5
-
-# Allow replication connections from localhost, by a user with the
-# replication privilege.
-local   replication     all                                     trust
-host    replication     all             127.0.0.1/32            md5
-host    replication     all             ::1/128                 md5
+# IPv6 local connections (localhost only)
+host    all             all             ::1/128                 scram-sha-256
 
 # Docker network connections (internal network access)
-# Specific to jeex-data network subnet
-host    all             all             172.19.0.0/16           md5
+# Require SCRAM-SHA-256 for all internal connections
+host    all             all             172.19.0.0/16           scram-sha-256
+
+# SSL/TLS connections for internal Docker services
+# Enforce TLS encryption for all internal service connections
+hostssl all             jeex_user       172.19.0.0/16           scram-sha-256
+hostssl all             jeex_admin      172.19.0.0/16           scram-sha-256
+
+# Replication connections (for backup and recovery)
+local   replication     all                                     scram-sha-256
+host    replication     all             127.0.0.1/32            scram-sha-256
+host    replication     all             ::1/128                 scram-sha-256
+hostssl replication     jeex_admin      172.19.0.0/16           scram-sha-256
+
+# Read-only user connections (for reporting/monitoring)
+host    all             jeex_readonly   172.19.0.0/16           scram-sha-256
+hostssl all             jeex_readonly   172.19.0.0/16           scram-sha-256
+
+# Database monitoring and health check connections
+# Allow health checks from internal network
+host    jeex_idea       jeex_user       172.19.0.0/16           scram-sha-256
+
+# Additional security rules
+# Reject connections from unknown hosts (blacklist approach)
+host    all             all             0.0.0.0/0               reject
