fix: update after review

--- a/.env.template
+++ b/.env.template
@@ -74,10 +74,18 @@ DATABASE_MAX_OVERFLOW=20
 REDIS_MAX_CONNECTIONS=10
 
 # =============================================================================
+# Backup Configuration
+# =============================================================================
+
+# Disable backup encryption for development (enable in production)
+BACKUP_ENCRYPTION=false
+
+# =============================================================================
 # Monitoring and Observability
 # =============================================================================
 
 # OpenTelemetry configuration
+OTEL_EXPORTER_OTLP_ENDPOINT=http://otel-collector:4317
 OTEL_SERVICE_NAME=jeex-idea-api
 OTEL_SERVICE_VERSION=0.1.0
 
