--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -72,7 +72,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://jeex_user:${POSTGRES_PASSWORD}@localhost:5220/jeex_idea
+sqlalchemy.url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 
 [post_write_hooks]
