--- a/docker/postgres/pg_hba.conf
+++ b/docker/postgres/pg_hba.conf
@@ -1,12 +1,17 @@
 # JEEX Idea PostgreSQL Host-Based Authentication Configuration
 # This file controls client authentication for PostgreSQL with enhanced security
 # Implements TLS encryption and proper access controls
+#
+# ⚠️  WARNING: This configuration is for DEVELOPMENT only!
+# Never use these settings in production or staging environments.
+# Production requires stricter authentication methods and monitoring.
 
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
 
 # "local" is for Unix domain socket connections only
-# Allow trust for local Unix socket connections (container internal)
-local   all             all                                     trust
+# Use scram-sha-256 for local Unix socket connections (container internal)
+# This matches the POSTGRES_INITDB_ARGS setting in docker-compose.yml
+local   all             all                                     scram-sha-256
 
 # IPv4 local connections (localhost only)
 host    all             all             127.0.0.1/32            scram-sha-256
@@ -14,14 +19,14 @@ host    all             all             127.0.0.1/32            scram-sha-256
 # IPv6 local connections (localhost only)
 host    all             all             ::1/128                 scram-sha-256
 
-# Docker network connections (internal network access)
-# Require SCRAM-SHA-256 for all internal connections
-host    all             all             172.19.0.0/16           scram-sha-256
-
-# SSL/TLS connections for internal Docker services
+# SSL/TLS connections for internal Docker services (enforced first)
 # Enforce TLS encryption for all internal service connections
 hostssl all             jeex_user       172.19.0.0/16           scram-sha-256
 hostssl all             jeex_admin      172.19.0.0/16           scram-sha-256
+
+# Docker network connections (fallback for other users)
+# Allow non-TLS connections only for non-admin users
+host    all             all             172.19.0.0/16           scram-sha-256
 
 # Replication connections (for backup and recovery)
 local   replication     all                                     scram-sha-256
