fix: update after review

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -72,7 +72,10 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+# Database URL is dynamically constructed in alembic/env.py from environment variables
+# ConfigParser does not support ${VAR} interpolation syntax
+# Leave this as a placeholder - actual URL comes from DATABASE_URL env var
+sqlalchemy.url = driver://user:pass@localhost/dbname
 
 
 [post_write_hooks]
