--- a/docker/postgres/pg_hba.conf
+++ b/docker/postgres/pg_hba.conf
@@ -35,12 +35,8 @@ host    replication     all             ::1/128                 scram-sha-256
 hostssl replication     jeex_admin      172.19.0.0/16           scram-sha-256
 
 # Read-only user connections (for reporting/monitoring)
-host    all             jeex_readonly   172.19.0.0/16           scram-sha-256
+# Use hostssl to enforce TLS for readonly access
 hostssl all             jeex_readonly   172.19.0.0/16           scram-sha-256
-
-# Database monitoring and health check connections
-# Allow health checks from internal network
-host    jeex_idea       jeex_user       172.19.0.0/16           scram-sha-256
 
 # Additional security rules
 # Reject connections from unknown hosts (blacklist approach)
