--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -186,7 +186,7 @@ services:
     ports:
       - "4317:4317"  # OTLP gRPC receiver
       - "4318:4318"  # OTLP HTTP receiver
-      - "8888:8888"  # Prometheus metrics
+      - "8888:9464"  # Prometheus metrics (internal 9464 -> external 8888)
     environment:
       <<: *common-variables
     volumes:
