--- a/backend/requirements-dev.txt
+++ b/backend/requirements-dev.txt
@@ -12,6 +12,7 @@ pytest-cov==7.0.0
 pytest-mock==3.14.0
 pytest-benchmark==5.1.0
 pytest-profiling==1.7.0
+pytest-json-report==1.5.0
 
 # Code formatting and linting
 ruff==0.14.1
