fix: update after review

--- a/docker/redis/redis.conf
+++ b/docker/redis/redis.conf
@@ -42,7 +42,8 @@ maxclients 10000
 
 # Security (Domain-Driven approach with AUTH)
 # Authentication required for all connections
-requirepass jeex_redis_secure_password_change_in_production
+# Password is set via command line --requirepass flag from environment variable
+# See docker-compose.yml for REDIS_PASSWORD configuration
 
 # Performance tuning for development
 hash-max-ziplist-entries 512
