--- a/docker/redis/redis.conf
+++ b/docker/redis/redis.conf
@@ -8,8 +8,8 @@ port 6379
 timeout 0
 tcp-keepalive 300
 
-# Memory management (optimized for development)
-maxmemory 256mb
+# Memory management (configured for 512MB limit as per requirements)
+maxmemory 512mb
 maxmemory-policy allkeys-lru
 maxmemory-samples 5
 
@@ -40,9 +40,10 @@ logfile ""
 # Client connection limits
 maxclients 10000
 
-# Security (development environment)
-# In production, use proper authentication and network isolation
-# requirepass your_strong_password_here
+# Security (Domain-Driven approach with AUTH)
+# Authentication required for all connections
+# Password is set via command line --requirepass flag from environment variable
+# See docker-compose.yml for REDIS_PASSWORD configuration
 
 # Performance tuning for development
 hash-max-ziplist-entries 512
