feat(observability): implement full OpenTelemetry stack with monitoring
- Add OpenTelemetry collector with full-stack configuration
- Implement auto-instrumentation for FastAPI, PostgreSQL, Redis, Qdrant
- Add correlation ID system across all services
- Implement comprehensive security controls and data sanitization
- Add error handling and resilience mechanisms (circuit breaker, buffering)
- Create telemetry management system with automated cleanup
- Add comprehensive test coverage and documentation

Key components:
- Correlation ID middleware and propagation
- Project-based data isolation
- PII detection and redaction
- SQL query sanitization
- Redis and Qdrant instrumentation with detailed metrics
- Resilient span exporter with local buffering
- File-based telemetry storage with rotation

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,12 @@
 .env.prod
 .env.production
 
+# Temporary and telemetry files (NEVER commit these!)
+/tmp/
+*.telemetry.json
+telemetry.json*
+otel-*.json
+
 # Additional secret files
 *.pem
 *.key
@@ -100,6 +106,3 @@ playwright-report/
 # Review reports (generated dynamically)
 reviews/*
 !reviews/README.md
-
-# AI assistant local settings
-.ai/settings.local.json
