--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -20,15 +20,15 @@ receivers:
   prometheus:
     config:
       scrape_configs:
-        - job_name: 'otel-collector'
+        - job_name: "otel-collector"
           static_configs:
-            - targets: ['localhost:9464']
+            - targets: ["localhost:9464"]
           scrape_interval: 15s
-        - job_name: 'jeex-idea-api'
+        - job_name: "jeex-idea-api"
           static_configs:
-            - targets: ['api:8000']
+            - targets: ["api:8000"]
           scrape_interval: 15s
-          metrics_path: '/metrics'
+          metrics_path: "/metrics"
 
   # File receiver for reading existing log files
   filelog:
@@ -88,7 +88,6 @@ processors:
         action: delete
 
 exporters:
-
   # Prometheus exporter for metrics exposure
   prometheus:
     endpoint: "0.0.0.0:9464"
@@ -113,10 +112,9 @@ exporters:
     sampling_thereafter: 1000
 
 extensions:
-  # Health check extension (localhost only)
+  # Health check extension (available for Docker health checks)
   health_check:
-    endpoint: 127.0.0.1:8888
-    path: /health
+    endpoint: 0.0.0.0:13133
 
   # Pprof extension for performance profiling (localhost only)
   pprof:
@@ -133,19 +131,22 @@ service:
     # Traces pipeline
     traces:
       receivers: [otlp]
-      processors: [memory_limiter, resource, transform, resourcedetection, batch]
+      processors:
+        [memory_limiter, resource, transform, resourcedetection, batch]
       exporters: [debug, file]
 
     # Metrics pipeline (NO file export - only Prometheus + debug)
     metrics:
       receivers: [otlp, prometheus]
-      processors: [memory_limiter, resource, transform, resourcedetection, batch]
+      processors:
+        [memory_limiter, resource, transform, resourcedetection, batch]
       exporters: [prometheus, debug]
 
     # Logs pipeline
     logs:
       receivers: [otlp, filelog]
-      processors: [memory_limiter, resource, transform, resourcedetection, batch]
+      processors:
+        [memory_limiter, resource, transform, resourcedetection, batch]
       exporters: [debug, file]
 
   # Telemetry configuration for the collector itself
@@ -156,7 +157,6 @@ service:
     logs:
       level: info
       development: true
-
 # Configuration validation and performance tuning
 # Target: <5% overhead for application performance
 # Resource limits: 256MB memory, 0.25 CPU cores
