feat(agents): setup multi-agent framework with isolation, telemetry, and tests
- Add agent modules: orchestrator, context, contracts, state_manager, tracker, telemetry, resilience, isolation
- Update API: backend/app/api/endpoints/agents.py
- Add migration: backend/alembic/versions/007_agent_framework_setup.py
- Add docs: docs/agents/* and stories/setup-multi-agent-framework/*
- Add tests: backend/tests/unit/test_agents/*, backend/tests/integration/test_agent_orchestration.py
- Update Makefile, backend/requirements.txt, otel-collector-config.yaml
- Update backlog: stories/backlog.md
- Enforce project_id scoping and observability conventions

Refs: stories/setup-multi-agent-framework

--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -24,11 +24,12 @@ receivers:
           static_configs:
             - targets: ["localhost:9464"]
           scrape_interval: 15s
-        - job_name: "jeex-idea-api"
-          static_configs:
-            - targets: ["api:8000"]
-          scrape_interval: 15s
-          metrics_path: "/metrics"
+        # API metrics are exported via OTLP, not Prometheus scrape
+        # - job_name: "jeex-idea-api"
+        #   static_configs:
+        #     - targets: ["api:8000"]
+        #   scrape_interval: 15s
+        #   metrics_path: "/metrics"
 
   # File receiver for reading existing log files
   filelog:
@@ -114,7 +115,7 @@ exporters:
 extensions:
   # Health check extension (available for Docker health checks)
   health_check:
-    endpoint: 0.0.0.0:13133
+    endpoint: 127.0.0.1:13133
 
   # Pprof extension for performance profiling (localhost only)
   pprof:
