--- a/.ai/commands/coderabbit.toml
+++ b/.ai/commands/coderabbit.toml
@@ -34,7 +34,7 @@ Run CodeRabbit CLI analysis in prompt-only mode optimized for AI agents, then sy
 **Step 1: CodeRabbit Analysis**
 Run CodeRabbit analysis on {{args}} (current directory if no arguments provided):
 
-!timeout 1200 coderabbit --prompt-only {{args}}
+!timeout 1200 coderabbit review --prompt-only {{args}}
 
 **IMPORTANT: Analysis Duration**
 CodeRabbit analysis can take up to 10 minutes to complete, especially for large changesets or projects with many files. **Wait patiently** - do NOT interrupt the process.
