--- a/.markdownlint.jsonc
+++ b/.markdownlint.jsonc
@@ -1,22 +1,24 @@
 {
   "default": true,
+  "MD001": false,
   "MD013": false,
+  "MD024": {"siblings_only": true},
+  "MD029": false,
   "MD033": false,
+  "MD036": false,
+  "MD040": false,
   "MD041": false,
   "MD003": {"style": "atx"},
   "MD007": {"indent": 2},
   "MD009": {"br_spaces": 2},
   "MD012": {"maximum": 2},
-  "MD024": {"allow_different_nesting": true},
   "MD025": {"front_matter_title": "^\\s*title\\s*[:=]"},
-  "MD029": {"style": "ordered"},
   "MD030": {
     "ul_single": 1,
     "ul_multi": 1,
     "ol_single": 1,
     "ol_multi": 1
   },
-  "MD040": true,
   "MD046": {"style": "fenced"},
   "MD048": {"style": "backtick"}
 }
