--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@
 # Core dependencies for FastAPI application with advanced observability
 
 # Web framework
-fastapi==0.119.0
+fastapi==0.120.0
 uvicorn[standard]==0.38.0
 
 # Database and ORM
@@ -18,9 +18,9 @@ redis==6.4.0
 httpx==0.28.1
 
 # Environment management
-pydantic==2.10.5
-pydantic-settings==2.7.1
-python-dotenv==1.0.1
+pydantic==2.11.9
+pydantic-settings==2.10.1
+python-dotenv==1.1.1
 
 # Qdrant client
 qdrant-client==1.15.1
@@ -30,17 +30,18 @@ structlog==25.4.0
 
 # Phase 3: Optimization and Monitoring Dependencies
 
-# OpenTelemetry observability
-opentelemetry-api==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-instrumentation==0.50b0
-opentelemetry-instrumentation-fastapi==0.50b0
-opentelemetry-instrumentation-sqlalchemy==0.50b0
-opentelemetry-instrumentation-redis==0.50b0
-opentelemetry-instrumentation-httpx==0.50b0
-opentelemetry-instrumentation-requests==0.50b0
-opentelemetry-exporter-otlp==1.29.0
-opentelemetry-exporter-otlp-proto-http==1.29.0
+# OpenTelemetry observability (aligned with CrewAI >= 0.186.1)
+opentelemetry-api==1.31.0
+opentelemetry-sdk==1.31.0
+opentelemetry-instrumentation==0.52b0
+opentelemetry-instrumentation-fastapi==0.52b0
+opentelemetry-instrumentation-sqlalchemy==0.52b0
+opentelemetry-instrumentation-redis==0.52b0
+opentelemetry-instrumentation-httpx==0.52b0
+opentelemetry-instrumentation-requests==0.52b0
+opentelemetry-exporter-otlp==1.31.0
+opentelemetry-exporter-otlp-proto-http==1.31.0
+wrapt==1.17.3
 
 # Performance monitoring and metrics
 prometheus-client==0.23.1
@@ -48,6 +49,10 @@ psutil==7.1.0
 
 # Connection pooling and retry
 tenacity==9.0.0
+
+# AI and Agent Utilities
+crewai==1.1.0
+pydantic-ai==1.0.8
 
 # Database performance monitoring
 # Note: pg-stats packages not available, monitoring will be implemented via SQLAlchemy
